# streamlit_object_counter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
src/: app.py
src/utils/: configs.py
