[tool.poetry]
name = "object_counter"
version = "0.1.0"
description = ""
authors = ["Timon Schmelzer <timon.schmelzer@grandcentrix.net>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
opencv-python = "^4.5.4"
numpy = "^1.21.4"
streamlit = "^1.2.0"
watchdog = "^2.1.6"
plotly = "^5.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
